OO-3993: allow to cancel a lecture without reason if not available